fix: make groups and identifiers case insensitive